# Data-Engineer-p01

./: README.md
Ingeniero de datos/: README.md
Proyecto Data Engineer/: Pipfile  README.md  Transformaciones.ipynb  consultas.ipynb  main.py  pyproject.toml  requirements.txt
Proyecto Data Engineer/Data_mdif/: disney_Plus_modificado.csv  hulu_modificado.csv  netflix_modificado.csv
Proyecto Data Engineer/deta/: state
deta/: prog_info
