[tool.poetry]
name = "app"
version = "0.0.1"
description = "Ultimate FastAPI Tutorial Part 1"
authors = ["ChristopherGS"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "~0.20.0"
fastapi = "~0.89.1"
python-multipart = "~0.0.5"
pydantic = {extras = ["email"], version = "~1.10.4"}
pandas = "~1.5.3"
